GNOME Bugzilla – Bug 674011
videopool: fix mem leak
Last modified: 2012-04-14 08:36:44 UTC
When setting its config, the pool increase the ref count of the allocator, but at finalize the ref count is also increased rather than decreased. This one-liner patch changes the gst_allocator_ref() for gst_allocator_unref()
Created attachment 211953 [details] [review] videopool: fix mem leak
commit 3f3dceb6751d3047388f78ac6badd8168db7bac1 Author: Víctor Manuel Jáquez Leal <vjaquez@igalia.com> Date: Thu Apr 12 21:13:08 2012 +0200 videopool: fix mem leak When setting its config, the pool increase the ref count of the allocator, but at finalize the ref count is also increased rather than decreased. This one-liner patch changes the gst_allocator_ref() for gst_allocator_unref() Fixes https://bugzilla.gnome.org/show_bug.cgi?id=674011